# concurrency-lab

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: example_app.cpp.7B9DDF9A61EF8A5D.idx  example_test.cpp.9FC221471BB095BC.idx  lab00_clean.cpp.38A6F0A6EC73EC28.idx  lab00_race.cpp.E4E6DFE2F8146EB2.idx
bench/: example_bench.cpp
doc/: cpp_concurrency_plan_v2_repo_skeleton.md
labs/week00/: README.md
labs/week00/src/: Lab00A  lab00_clean.cpp  lab00_race.cpp
labs/week01/: Lab01A.cpp  Lab01B.cpp  Lab01C.cpp  README.md
labs/week02/: README.md
labs/week03/: README.md
labs/week04/: README.md
labs/week05/: README.md
labs/week06/: README.md
labs/week07/: README.md
labs/week08/: README.md
labs/week09/: README.md
labs/week10/: README.md
notes/: week00.md  week01.md  week02.md  week03.md  week04.md  week05.md  week06.md  week07.md  week08.md  week09.md  week10.md
notes/templates/: hb_diagram_template.md  lab_readme_template.md  profiling_template.md  results_template.txt  week_notes_template.md
results/: week00.txt  week00_perf_report.txt  week01.txt  week02.txt  week03.txt  week04.txt  week05.txt  week06.txt  week07.txt  week08.txt  week09.txt  week10.txt
scripts/: build_release.sh  build_tsan.sh  env_check.sh  run_bench.sh  run_profile_perf.sh  run_tests.sh  run_tsan.sh
src/: example_app.cpp
tests/: example_test.cpp
